--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -185,6 +185,11 @@
     <ClInclude Include="..\Header\FieldObject.h" />
     <ClInclude Include="..\Header\DesertRhino.h" />
     <ClInclude Include="..\Header\GolemHead.h" />
+    <ClInclude Include="..\Header\GolemLeftLeg.h" />
+    <ClInclude Include="..\Header\GolemLowerJaw.h" />
+    <ClInclude Include="..\Header\GolemParts.h" />
+    <ClInclude Include="..\Header\GolemRightLeg.h" />
+    <ClInclude Include="..\Header\GolemUpperJaw.h" />
     <ClInclude Include="..\Header\GrabbableObj.h" />
     <ClInclude Include="..\Header\NearReactMoonObj.h" />
     <ClInclude Include="..\Header\NearReactObj.h" />
@@ -230,6 +235,10 @@
     <ClCompile Include="..\Code\FieldObject.cpp" />
     <ClCompile Include="..\Code\DesertRhino.cpp" />
     <ClCompile Include="..\Code\GolemHead.cpp" />
+    <ClCompile Include="..\Code\GolemLeftLeg.cpp" />
+    <ClCompile Include="..\Code\GolemLowerJaw.cpp" />
+    <ClCompile Include="..\Code\GolemRightLeg.cpp" />
+    <ClCompile Include="..\Code\GolemUpperJaw.cpp" />
     <ClCompile Include="..\Code\GrabbableObj.cpp" />
     <ClCompile Include="..\Code\NearReactMoonObj.cpp" />
     <ClCompile Include="..\Code\NearReactObj.cpp" />
