--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -185,9 +185,13 @@
     <ClInclude Include="..\Header\FieldObject.h" />
     <ClInclude Include="..\Header\DesertRhino.h" />
     <ClInclude Include="..\Header\GolemHead.h" />
+    <ClInclude Include="..\Header\GolemLeftArm.h" />
+    <ClInclude Include="..\Header\GolemLeftHand.h" />
     <ClInclude Include="..\Header\GolemLeftLeg.h" />
     <ClInclude Include="..\Header\GolemLowerJaw.h" />
     <ClInclude Include="..\Header\GolemParts.h" />
+    <ClInclude Include="..\Header\GolemRightArm.h" />
+    <ClInclude Include="..\Header\GolemRightHand.h" />
     <ClInclude Include="..\Header\GolemRightLeg.h" />
     <ClInclude Include="..\Header\GolemUpperJaw.h" />
     <ClInclude Include="..\Header\GrabbableObj.h" />
@@ -235,8 +239,12 @@
     <ClCompile Include="..\Code\FieldObject.cpp" />
     <ClCompile Include="..\Code\DesertRhino.cpp" />
     <ClCompile Include="..\Code\GolemHead.cpp" />
+    <ClCompile Include="..\Code\GolemLeftArm.cpp" />
+    <ClCompile Include="..\Code\GolemLeftHand.cpp" />
     <ClCompile Include="..\Code\GolemLeftLeg.cpp" />
     <ClCompile Include="..\Code\GolemLowerJaw.cpp" />
+    <ClCompile Include="..\Code\GolemRightArm.cpp" />
+    <ClCompile Include="..\Code\GolemRightHand.cpp" />
     <ClCompile Include="..\Code\GolemRightLeg.cpp" />
     <ClCompile Include="..\Code\GolemUpperJaw.cpp" />
     <ClCompile Include="..\Code\GrabbableObj.cpp" />
