--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -125,6 +125,7 @@
       <AddCodeBeforeSourceInclude>#pragma message("$$file_name$$")</AddCodeBeforeSourceInclude>
       <MaxFilesInUnityFile>5</MaxFilesInUnityFile>
       <CombineFilesOnlyFromTheSameFolder>true</CombineFilesOnlyFromTheSameFolder>
+      <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -182,8 +183,6 @@
     <ClInclude Include="..\..\ThirdParty\imgui_impl_dx9.h" />
     <ClInclude Include="..\..\ThirdParty\imgui_impl_win32.h" />
     <ClInclude Include="..\..\ThirdParty\imgui_internal.h" />
-    <ClInclude Include="..\..\ThirdParty\imgui_single_file.h" />
-    <ClInclude Include="..\..\ThirdParty\imgui_stdlib.h" />
     <ClInclude Include="..\..\ThirdParty\imstb_rectpack.h" />
     <ClInclude Include="..\..\ThirdParty\imstb_textedit.h" />
     <ClInclude Include="..\..\ThirdParty\imstb_truetype.h" />
@@ -239,7 +238,6 @@
     <ClCompile Include="..\..\ThirdParty\imgui_draw.cpp" />
     <ClCompile Include="..\..\ThirdParty\imgui_impl_dx9.cpp" />
     <ClCompile Include="..\..\ThirdParty\imgui_impl_win32.cpp" />
-    <ClCompile Include="..\..\ThirdParty\imgui_stdlib.cpp" />
     <ClCompile Include="..\..\ThirdParty\imgui_tables.cpp" />
     <ClCompile Include="..\..\ThirdParty\imgui_widgets.cpp" />
     <ClCompile Include="..\Code\AttackableObj.cpp" />
@@ -276,6 +274,7 @@
     <ClCompile Include="..\Code\Player_State_Swing.cpp" />
     <ClCompile Include="..\Code\Player_State_Walk.cpp" />
     <ClCompile Include="..\Code\PushStone.cpp" />
+    <ClCompile Include="..\Code\Scene_Tool.cpp" />
     <ClCompile Include="..\Code\SkyBox.cpp" />
     <ClCompile Include="..\Code\Stage.cpp" />
     <ClCompile Include="..\Code\SunGollem.cpp" />
@@ -283,7 +282,6 @@
     <ClCompile Include="..\Code\TrashBig.cpp" />
     <ClCompile Include="BalpanObj.cpp" />
     <ClCompile Include="Client.cpp" />
-    <ClCompile Include="Scene_Tool.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -297,13 +295,6 @@
   <ItemGroup>
     <Image Include="Client.ico" />
     <Image Include="small.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\..\ThirdParty\imgui.gdb" />
-    <None Include="..\..\ThirdParty\imgui.natstepfilter" />
-  </ItemGroup>
-  <ItemGroup>
-    <Natvis Include="..\..\ThirdParty\imgui.natvis" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
