Feature : "Hierachy, Inspector 제작 및 제어 완료"

--- a/Framework/Client/Include/imgui.ini
+++ b/Framework/Client/Include/imgui.ini
@@ -14,7 +14,17 @@ Size=550,680
 Collapsed=0
 
 [Window][Object_Tool]
-Pos=61,61
+Pos=1,1
 Size=304,369
+Collapsed=0
+
+[Window][Inspector]
+Pos=1066,1
+Size=216,865
+Collapsed=0
+
+[Window][Hierachy]
+Pos=799,2
+Size=269,864
 Collapsed=0
 
