--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -196,11 +196,20 @@
     <Filter Include="02. GameObject\04. UI\00. AdventureBook">
       <UniqueIdentifier>{4295009d-bbed-49af-be78-83404f7e0dfb}</UniqueIdentifier>
     </Filter>
-    <Filter Include="02. GameObject\04. UI\00. AdventureBook\01. Page">
-      <UniqueIdentifier>{b523e7fc-8d1b-4c14-aa22-a2ae5525fdde}</UniqueIdentifier>
-    </Filter>
     <Filter Include="02. GameObject\04. UI\00. AdventureBook\00. Background">
       <UniqueIdentifier>{09bc8756-f762-4582-9d13-2f0618ed54d9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\99. NPC">
+      <UniqueIdentifier>{90d7681b-34b9-4ce9-adfd-aa397b8596cd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\99. NPC\00. Tutorial">
+      <UniqueIdentifier>{72e16abb-9044-4958-9999-738721d1c00d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\04. UI\00. AdventureBook\01. Pages">
+      <UniqueIdentifier>{b523e7fc-8d1b-4c14-aa22-a2ae5525fdde}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\04. UI\01. NPCText">
+      <UniqueIdentifier>{9ebf1511-d022-4236-bcea-0cc7e49ceb8d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -400,12 +409,23 @@
       <Filter>02. GameObject\06. FieldObj\05. HitObj</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\UIPages.h">
-      <Filter>02. GameObject\04. UI\00. AdventureBook\01. Page</Filter>
+      <Filter>02. GameObject\04. UI\00. AdventureBook\01. Pages</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\NPC.h">
+      <Filter>02. GameObject\99. NPC</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\UI_AdventureBook.h">
-      <Filter>02. GameObject\04. UI\00. AdventureBook</Filter>
+      <Filter>02. GameObject\04. UI\00. AdventureBook\00. Background</Filter>
     </ClInclude>
-    <ClInclude Include="..\Header\UI_BookBackground.h" />
+    <ClInclude Include="..\Header\UI_BookBackground.h">
+      <Filter>02. GameObject\04. UI\00. AdventureBook\00. Background</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\TutorialNPC.h">
+      <Filter>02. GameObject\99. NPC\00. Tutorial</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\NPCText.h">
+      <Filter>02. GameObject\04. UI\01. NPCText</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -588,12 +608,23 @@
       <Filter>02. GameObject\06. FieldObj\05. HitObj</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\UIPages.cpp">
-      <Filter>02. GameObject\04. UI\00. AdventureBook\01. Page</Filter>
+      <Filter>02. GameObject\04. UI\00. AdventureBook\01. Pages</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\NPC.cpp">
+      <Filter>02. GameObject\99. NPC</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\UI_AdventureBook.cpp">
-      <Filter>02. GameObject\04. UI\00. AdventureBook</Filter>
+      <Filter>02. GameObject\04. UI\00. AdventureBook\00. Background</Filter>
     </ClCompile>
-    <ClCompile Include="..\Code\UI_BookBackground.cpp" />
+    <ClCompile Include="..\Code\UI_BookBackground.cpp">
+      <Filter>02. GameObject\04. UI\00. AdventureBook\00. Background</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\TutorialNPC.cpp">
+      <Filter>02. GameObject\99. NPC\00. Tutorial</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\NPCText.cpp">
+      <Filter>02. GameObject\04. UI\01. NPCText</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Client.ico">
