--- a/Framework/Client/Include/imgui.ini
+++ b/Framework/Client/Include/imgui.ini
@@ -15,16 +15,21 @@ Collapsed=0
 
 [Window][Object_Tool]
 Pos=1,1
-Size=304,369
+Size=211,422
 Collapsed=0
 
 [Window][Inspector]
-Pos=1066,1
-Size=216,865
+Pos=1083,2
+Size=199,352
 Collapsed=0
 
 [Window][Hierachy]
-Pos=799,2
-Size=269,864
+Pos=1073,374
+Size=195,398
+Collapsed=0
+
+[Window][Tool]
+Pos=24,14
+Size=327,353
 Collapsed=0
 
